using UnityEngine;

public static class AnimationStrings
{
    public static string IsMoving = "isMoving";
    public const string IsRunning = "isRunning";
    public const string IsJumping = "isJumping";
    public const string IsFalling = "isFalling";
    public const string IsIdle = "isIdle";
    public const string IsGrounded = "isGrounded";
    public const string Attack = "attack";
    public const string Hit = "hit";
    public const string Death = "death";
    public const string Speed = "speed";
}